public interface Behavior {
    void execute(AdaptiveCreature creature, Weather weather);
}
