public final class Utils {
    private Utils() {
    }

    public static void makeSwim(Swimmer creature) {
        creature.swim();
    }
}
