public interface WeatherObserver {
    void onWeatherChange(Weather weather);
}
