@startuml
' Diagramme de classes généré depuis le code source du projet

skinparam classAttributeIconSize 0
class Creature {
  - energy : int = 100
  + name : String
  + species : String
  + Creature(name:String, species:String)
  + move()
  + rest()
  + getEnergy() : int
  # changeEnergy(delta:int)
  + toString()
}

abstract class Animal {
  + Animal(name:String, species:String)
  {abstract} + makeSound()
  + move()
}

interface Swimmer {
  + swim()
}

interface Flyer {
  + fly()
}

interface Predator {
  + hunt(prey : Animal)
}

' Strategy pattern
interface Behavior {
  + execute(creature:AdaptiveCreature, weather:Weather)
}

class ActiveBehavior {
  + execute(creature:AdaptiveCreature, weather:Weather)
}

class SleepingBehavior {
  + execute(creature:AdaptiveCreature, weather:Weather)
}

class HidingBehavior {
  + execute(creature:AdaptiveCreature, weather:Weather)
}

class Kappa {
}

class Ningyo {
  + hunt(prey:Animal)
}

class Tombo {
}

class Jorogumo {
  + bite(target:Animal)
}

class Katatsumuri {
}

class Utils {
  + makeSwim(Swimmer)
}

class Main {
  + main(args:String[])
}

' Observer pattern: Weather notifies WeatherObserver
class Weather {
  + condition : String
  + temperature : int
  + Weather(condition:String, temperature:int)
  + setWeather(condition:String, temperature:int)
  + addObserver(o:WeatherObserver)
  + removeObserver(o:WeatherObserver)
}

interface WeatherObserver {
  + onWeatherChange(weather:Weather)
}

' Adaptive creature that combines both patterns
class AdaptiveCreature {
  + AdaptiveCreature(name:String, species:String)
  + setBehaviorFor(condition:String, b:Behavior)
  + onWeatherChange(weather:Weather)
}

' Héritage
Creature <|-- Animal
Animal <|-- Kappa
Animal <|-- Ningyo
Animal <|-- Tombo
Animal <|-- Jorogumo
Animal <|-- Katatsumuri
Animal <|-- AdaptiveCreature

' Implémentations d'interfaces
Swimmer <|.. Kappa
Swimmer <|.. Ningyo
Flyer <|.. Tombo
Predator <|.. Ningyo

' Strategy implementations
Behavior <|.. ActiveBehavior
Behavior <|.. SleepingBehavior
Behavior <|.. HidingBehavior

' Observer implementations / usages
WeatherObserver <|.. AdaptiveCreature
Weather ..> WeatherObserver : notifyObservers()

' AdaptiveCreature uses Behavior (composition)
AdaptiveCreature ..> Behavior : currentBehavior

' Utilisations / dépendances
Jorogumo ..> Animal : bite()
Ningyo ..> Animal : hunt()
Utils ..> Swimmer : makeSwim()
Main ..> Animal : uses

@enduml

